--- a/Fashion MNIST(CNN).ipynb
+++ b/Fashion MNIST(CNN).ipynb
@@ -259,7 +259,7 @@
     "else:\n",
     "    print('Downloading..........')\n",
     "    requests = requests.get(url)\n",
-    "    with open('helper_functions', 'wb') as f:\n",
+    "    with open('helper_functions.py', 'wb') as f:\n",
     "        f.write(requests.content)"
    ]
   },
