--- a/Fashion MNIST(CNN).ipynb
+++ b/Fashion MNIST(CNN).ipynb
@@ -254,7 +254,7 @@
     "\n",
     "url = 'https://raw.githubusercontent.com/mrdbourke/pytorch-deep-learning/refs/heads/main/helper_functions.py'\n",
     "\n",
-    "if Path('helper_functions').is_file():\n",
+    "if Path('helper_functions.py').is_file():\n",
     "    print('Already exists!')\n",
     "else:\n",
     "    print('Downloading..........')\n",
