--- a/Fashion MNIST(CNN).ipynb
+++ b/Fashion MNIST(CNN).ipynb
@@ -258,9 +258,9 @@
     "    print('Already exists!')\n",
     "else:\n",
     "    print('Downloading..........')\n",
-    "    requests = requests.get(url)\n",
+    "    response = requests.get(url)\n",
     "    with open('helper_functions.py', 'wb') as f:\n",
-    "        f.write(requests.content)"
+    "        f.write(response.content)"
    ]
   },
   {
