--- a/FoodNet_Mini.ipynb
+++ b/FoodNet_Mini.ipynb
@@ -135,9 +135,10 @@
     "        f.write(response.content)\n",
     "    \n",
     "    with zipfile.ZipFile(image_path / \"pizza_steak_sushi.zip\", \"r\") as zip_ref:\n",
-    "        print(\"Deleting zip file.........\")\n",
+    "        print(\"Unzipping zip file.........\")\n",
     "        zip_ref.extractall(image_path)\n",
     "    \n",
+         print(\"Deleting zip file.........\")
     "    os.remove(image_path / \"pizza_steak_sushi.zip\")"
    ]
   },
